--- a/tasks/task-4.html
+++ b/tasks/task-4.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Coding Challenge 3</title>
+        <title>Coding Challenge 4</title>
     </head>
 
     <body>
-        <h1>Tip calculator</h1>
+        <h1>Calculate BMI using objects</h1>
     </body>
     <script src="task-4.js"></script>
 </html>
